--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.1.0",
+    "mongodb": "^4.0.1",
     "next": "11.0.1",
+    "next-connect": "^0.10.1",
+    "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
