--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "isomorphic-unfetch": "^3.1.0",
+    "lodash": "^4.17.21",
+    "lru-cache": "^6.0.0",
     "mongodb": "^4.0.1",
     "next": "11.0.1",
     "next-connect": "^0.10.1",
