--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-connect": "^0.10.1",
     "numeral": "^2.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
