--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.0.1",
     "next": "11.0.1",
     "next-connect": "^0.10.1",
+    "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
