--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "lru-cache": "^6.0.0",
+    "moment": "^2.29.1",
     "mongodb": "^4.0.1",
     "next": "11.0.1",
     "next-connect": "^0.10.1",
@@ -19,7 +20,8 @@
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-feather": "^2.0.9"
+    "react-feather": "^2.0.9",
+    "react-moment": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
