--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
-    "react-moment": "^1.1.1"
+    "react-moment": "^1.1.1",
+    "recharts": "^2.1.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
