--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-hotjar": "^3.0.1",
     "react-moment": "^1.1.1",
     "recharts": "^2.1.2"
   },
